# phcue-ck

./: .gitignore  404.html  CHANCELOG.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
docs/: examples.md  index.md  installation.md  usage.md
examples/: index.html
installation/: index.html
scripts/: release.sh
search/: search_index.json
src/: lib.rs  main.rs
tests/cmd/: file_accessions.trycmd  keep_single_end_accession.trycmd  multiple_accessions.trycmd  one_accession.trycmd  remove_single_end_accession.trycmd
tests/cmd/file_accessions.in/: accessions.txt
usage/: index.html
