[package]
name = "fq-ck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
futures = "0.3.21"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
trycmd = "0.13.5"
