[package]
name = "phcue-ck"
version = "0.1.2"
edition = "2021"
authors = [ "Anders Goncalves da Silva <andersgs@gmail.com>" ]
description = "phcue-ck is a command line tool to obtain FTP links to FASTQ files from ENA using run accession"
readme = "README.md"
license = "MIT"
keywords = [ "bioinformatics", "fastq" ]
categories = [ "science", "command-line-utilities" ]
repository = "https://github.com/lgi-onehealth/phcue-ck"
exclude = ["/scripts", "Dockerfile", "/.github", "Makefile", "mkdocs.yml", "/docs", "CHANGELOG.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
csv = "1.1.6"
futures = "0.3.21"
openssl = { version = "0.10.41", features = ["vendored"] }
openssl-probe = "0.1.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
trycmd = "0.13.5"

